Fixed the margins so the scaling of spaces between the edge of the viewport and the div elements containing text scaled without jumping to from 30px to zero px when changing from tablet to mobile view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,10 @@
 				.col-mob-7, .col-mob-8, .col-mob-9, .col-mob-10, .col-mob-11, .col-mob-12{	
 			
 			float: left;
+			margin-left: 4%;
+			margin-right: 4%;
 			margin-bottom: 2%;
+
 
 
 		}
